[project]
name = "babylon-os"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.135.1",
    "greenlet>=3.3.2",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.48",
    "starlette>=0.52.1",
    "uvicorn>=0.41.0",
]
